Updated nft wireframe

--- a/workflow__nft_purchase_.html
+++ b/workflow__nft_purchase_.html
@@ -60,16 +60,15 @@
       <div id="u715" class="ax_default box_1">
         <div id="u715_div" class=""></div>
         <div id="u715_text" class="text ">
-          <p><span>Genesis Buy</span></p>
+          <p><span>Genesis page</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (Connector) -->
-      <div id="u716" class="ax_default connector">
-        <img id="u716_seg0" class="img " src="images/workflow__nft_purchase_/u716_seg0.svg" alt="u716_seg0"/>
-        <img id="u716_seg1" class="img " src="images/workflow__nft_purchase_/u716_seg1.svg" alt="u716_seg1"/>
-        <div id="u716_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Diamond) -->
+      <div id="u716" class="ax_default flow_shape">
+        <img id="u716_img" class="img " src="images/workflow__nft_purchase_/u716.svg"/>
+        <div id="u716_text" class="text ">
+          <p><span>Check login</span></p>
         </div>
       </div>
 
@@ -77,51 +76,47 @@
       <div id="u717" class="ax_default box_1">
         <div id="u717_div" class=""></div>
         <div id="u717_text" class="text ">
-          <p><span>Genesis page</span></p>
+          <p><span>Login Page</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (Diamond) -->
-      <div id="u718" class="ax_default flow_shape">
-        <img id="u718_img" class="img " src="images/workflow__nft_purchase_/u718.svg"/>
+      <!-- Unnamed (Rectangle) -->
+      <div id="u718" class="ax_default box_1">
+        <div id="u718_div" class=""></div>
         <div id="u718_text" class="text ">
-          <p><span>Check login</span></p>
+          <p><span>Button</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (Connector) -->
-      <div id="u719" class="ax_default connector">
-        <img id="u719_seg0" class="img " src="images/workflow__nft_purchase_/u719_seg0.svg" alt="u719_seg0"/>
-        <img id="u719_seg1" class="img " src="images/workflow__nft_purchase_/u719_seg1.svg" alt="u719_seg1"/>
-        <div id="u719_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Rectangle) -->
+      <div id="u719" class="ax_default box_1">
+        <div id="u719_div" class=""></div>
+        <div id="u719_text" class="text ">
+          <p><span>Page</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (Connector) -->
-      <div id="u720" class="ax_default connector">
-        <img id="u720_seg0" class="img " src="images/workflow__nft_purchase_/u720_seg0.svg" alt="u720_seg0"/>
-        <img id="u720_seg1" class="img " src="images/workflow__nft_purchase_/u720_seg1.svg" alt="u720_seg1"/>
-        <div id="u720_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Rectangle) -->
+      <div id="u720" class="ax_default label">
+        <div id="u720_div" class=""></div>
+        <div id="u720_text" class="text ">
+          <p><span>Legend:</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u721" class="ax_default box_1">
-        <div id="u721_div" class=""></div>
+        <img id="u721_img" class="img " src="images/workflow/u713.svg"/>
         <div id="u721_text" class="text ">
-          <p><span>Login Page</span></p>
+          <p><span>Links</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (Connector) -->
-      <div id="u722" class="ax_default connector">
-        <img id="u722_seg0" class="img " src="images/workflow__nft_purchase_/u722_seg0.svg" alt="u722_seg0"/>
-        <img id="u722_seg1" class="img " src="images/workflow__nft_purchase_/u722_seg1.svg" alt="u722_seg1"/>
-        <img id="u722_seg2" class="img " src="images/workflow__nft_purchase_/u722_seg2.svg" alt="u722_seg2"/>
-        <div id="u722_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <!-- Unnamed (Rectangle) -->
+      <div id="u722" class="ax_default box_1">
+        <img id="u722_img" class="img " src="images/workflow__nft_purchase_/u722.svg"/>
+        <div id="u722_text" class="text ">
+          <p><span>No</span></p>
         </div>
       </div>
 
@@ -129,47 +124,49 @@
       <div id="u723" class="ax_default box_1">
         <img id="u723_img" class="img " src="images/workflow__nft_purchase_/u723.svg"/>
         <div id="u723_text" class="text ">
-          <p><span>Yes</span></p>
+          <p><span>Purchase egg</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u724" class="ax_default box_1">
-        <div id="u724_div" class=""></div>
+        <img id="u724_img" class="img " src="images/workflow__nft_purchase_/u723.svg"/>
         <div id="u724_text" class="text ">
-          <p><span>Button</span></p>
+          <p><span>Purchase 10 eggs</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u725" class="ax_default box_1">
-        <div id="u725_div" class=""></div>
-        <div id="u725_text" class="text ">
-          <p><span>Page</span></p>
+      <!-- Unnamed (Connector) -->
+      <div id="u725" class="ax_default connector">
+        <img id="u725_seg0" class="img " src="images/workflow__nft_purchase_/u725_seg0.svg" alt="u725_seg0"/>
+        <img id="u725_seg1" class="img " src="images/workflow__nft_purchase_/u725_seg1.svg" alt="u725_seg1"/>
+        <img id="u725_seg2" class="img " src="images/workflow__nft_purchase_/u725_seg2.svg" alt="u725_seg2"/>
+        <div id="u725_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u726" class="ax_default label">
-        <div id="u726_div" class=""></div>
+      <!-- Unnamed (Diamond) -->
+      <div id="u726" class="ax_default flow_shape">
+        <img id="u726_img" class="img " src="images/workflow__nft_purchase_/u716.svg"/>
         <div id="u726_text" class="text ">
-          <p><span>Legend:</span></p>
+          <p><span>Sufficient </span></p><p><span>Credit?</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u727" class="ax_default box_1">
-        <img id="u727_img" class="img " src="images/workflow/u713.svg"/>
+        <div id="u727_div" class=""></div>
         <div id="u727_text" class="text ">
-          <p><span>Links</span></p>
+          <p><span>Verification of purchase and thank you message</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (Diamond) -->
-      <div id="u728" class="ax_default flow_shape">
-        <img id="u728_img" class="img " src="images/workflow__nft_purchase_/u718.svg"/>
+      <!-- Unnamed (Rectangle) -->
+      <div id="u728" class="ax_default box_1">
+        <div id="u728_div" class=""></div>
         <div id="u728_text" class="text ">
-          <p><span>Metamask</span></p><p><span>Connected?</span></p>
+          <p><span>Message: Insufficient credit (Top up)</span></p>
         </div>
       </div>
 
@@ -181,52 +178,50 @@
         </div>
       </div>
 
+      <!-- Unnamed (Rectangle) -->
+      <div id="u730" class="ax_default box_1">
+        <img id="u730_img" class="img " src="images/workflow__nft_purchase_/u722.svg"/>
+        <div id="u730_text" class="text ">
+          <p><span>No</span></p>
+        </div>
+      </div>
+
       <!-- Unnamed (Connector) -->
-      <div id="u730" class="ax_default connector">
-        <img id="u730_seg0" class="img " src="images/workflow__nft_purchase_/u730_seg0.svg" alt="u730_seg0"/>
-        <img id="u730_seg1" class="img " src="images/workflow__nft_purchase_/u730_seg1.svg" alt="u730_seg1"/>
-        <div id="u730_text" class="text " style="display:none; visibility: hidden">
+      <div id="u731" class="ax_default connector">
+        <img id="u731_seg0" class="img " src="images/workflow__nft_purchase_/u731_seg0.svg" alt="u731_seg0"/>
+        <div id="u731_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u731" class="ax_default box_1">
-        <img id="u731_img" class="img " src="images/workflow__nft_purchase_/u731.svg"/>
-        <div id="u731_text" class="text ">
-          <p><span>No</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
       <div id="u732" class="ax_default box_1">
-        <img id="u732_img" class="img " src="images/workflow__nft_purchase_/u731.svg"/>
+        <img id="u732_img" class="img " src="images/workflow__nft_purchase_/u732.svg"/>
         <div id="u732_text" class="text ">
-          <p><span>No</span></p>
+          <p><span>Yes</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u733" class="ax_default box_1">
-        <img id="u733_img" class="img " src="images/workflow__nft_purchase_/u733.svg"/>
+        <div id="u733_div" class=""></div>
         <div id="u733_text" class="text ">
-          <p><span>Purchase egg</span></p>
+          <p><span>&nbsp;Inventory</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u734" class="ax_default box_1">
-        <img id="u734_img" class="img " src="images/workflow__nft_purchase_/u733.svg"/>
-        <div id="u734_text" class="text ">
-          <p><span>Purchase 10 eggs</span></p>
+      <!-- Unnamed (Connector) -->
+      <div id="u734" class="ax_default connector">
+        <img id="u734_seg0" class="img " src="images/workflow__nft_purchase_/u734_seg0.svg" alt="u734_seg0"/>
+        <img id="u734_seg1" class="img " src="images/workflow__nft_purchase_/u734_seg1.svg" alt="u734_seg1"/>
+        <div id="u734_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
 
       <!-- Unnamed (Connector) -->
       <div id="u735" class="ax_default connector">
         <img id="u735_seg0" class="img " src="images/workflow__nft_purchase_/u735_seg0.svg" alt="u735_seg0"/>
-        <img id="u735_seg1" class="img " src="images/workflow__nft_purchase_/u735_seg1.svg" alt="u735_seg1"/>
-        <img id="u735_seg2" class="img " src="images/workflow__nft_purchase_/u735_seg2.svg" alt="u735_seg2"/>
         <div id="u735_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
@@ -252,37 +247,37 @@
         </div>
       </div>
 
-      <!-- Unnamed (Diamond) -->
-      <div id="u738" class="ax_default flow_shape">
-        <img id="u738_img" class="img " src="images/workflow__nft_purchase_/u718.svg"/>
-        <div id="u738_text" class="text ">
-          <p><span>Sufficient </span></p><p><span>Credit?</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u739" class="ax_default box_1">
-        <div id="u739_div" class=""></div>
-        <div id="u739_text" class="text ">
-          <p><span>Verification of purchase and thank you message</span></p>
+      <!-- Unnamed (Connector) -->
+      <div id="u738" class="ax_default connector">
+        <img id="u738_seg0" class="img " src="images/workflow__nft_purchase_/u738_seg0.svg" alt="u738_seg0"/>
+        <img id="u738_seg1" class="img " src="images/workflow__nft_purchase_/u738_seg1.svg" alt="u738_seg1"/>
+        <img id="u738_seg2" class="img " src="images/workflow__nft_purchase_/u738_seg2.svg" alt="u738_seg2"/>
+        <div id="u738_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
 
       <!-- Unnamed (Connector) -->
-      <div id="u740" class="ax_default connector">
-        <img id="u740_seg0" class="img " src="images/workflow__nft_purchase_/u740_seg0.svg" alt="u740_seg0"/>
-        <img id="u740_seg1" class="img " src="images/workflow__nft_purchase_/u740_seg1.svg" alt="u740_seg1"/>
-        <img id="u740_seg2" class="img " src="images/workflow__nft_purchase_/u740_seg2.svg" alt="u740_seg2"/>
-        <div id="u740_text" class="text " style="display:none; visibility: hidden">
+      <div id="u739" class="ax_default connector">
+        <img id="u739_seg0" class="img " src="images/workflow__nft_purchase_/u739_seg0.svg" alt="u739_seg0"/>
+        <img id="u739_seg1" class="img " src="images/workflow__nft_purchase_/u739_seg1.svg" alt="u739_seg1"/>
+        <img id="u739_seg2" class="img " src="images/workflow__nft_purchase_/u739_seg2.svg" alt="u739_seg2"/>
+        <div id="u739_text" class="text " style="display:none; visibility: hidden">
           <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Diamond) -->
+      <div id="u740" class="ax_default flow_shape">
+        <img id="u740_img" class="img " src="images/workflow__nft_purchase_/u716.svg"/>
+        <div id="u740_text" class="text ">
+          <p><span>Metamask connected and Email verified?</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Connector) -->
       <div id="u741" class="ax_default connector">
         <img id="u741_seg0" class="img " src="images/workflow__nft_purchase_/u741_seg0.svg" alt="u741_seg0"/>
-        <img id="u741_seg1" class="img " src="images/workflow__nft_purchase_/u741_seg1.svg" alt="u741_seg1"/>
-        <img id="u741_seg2" class="img " src="images/workflow__nft_purchase_/u741_seg2.svg" alt="u741_seg2"/>
         <div id="u741_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
@@ -290,15 +285,17 @@
 
       <!-- Unnamed (Rectangle) -->
       <div id="u742" class="ax_default box_1">
-        <div id="u742_div" class=""></div>
+        <img id="u742_img" class="img " src="images/workflow__nft_purchase_/u742.svg"/>
         <div id="u742_text" class="text ">
-          <p><span>Message: Insufficient credit (Top up)</span></p>
+          <p><span>Yes</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Connector) -->
       <div id="u743" class="ax_default connector">
         <img id="u743_seg0" class="img " src="images/workflow__nft_purchase_/u743_seg0.svg" alt="u743_seg0"/>
+        <img id="u743_seg1" class="img " src="images/workflow__nft_purchase_/u743_seg1.svg" alt="u743_seg1"/>
+        <img id="u743_seg2" class="img " src="images/workflow__nft_purchase_/u743_seg2.svg" alt="u743_seg2"/>
         <div id="u743_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
@@ -306,33 +303,35 @@
 
       <!-- Unnamed (Rectangle) -->
       <div id="u744" class="ax_default box_1">
-        <img id="u744_img" class="img " src="images/workflow__nft_purchase_/u731.svg"/>
+        <img id="u744_img" class="img " src="images/workflow__nft_purchase_/u722.svg"/>
         <div id="u744_text" class="text ">
           <p><span>No</span></p>
         </div>
       </div>
 
+      <!-- Unnamed (Rectangle) -->
+      <div id="u745" class="ax_default box_1">
+        <div id="u745_div" class=""></div>
+        <div id="u745_text" class="text ">
+          <p><span>Profile Page</span></p>
+        </div>
+      </div>
+
       <!-- Unnamed (Connector) -->
-      <div id="u745" class="ax_default connector">
-        <img id="u745_seg0" class="img " src="images/workflow__nft_purchase_/u745_seg0.svg" alt="u745_seg0"/>
-        <div id="u745_text" class="text " style="display:none; visibility: hidden">
+      <div id="u746" class="ax_default connector">
+        <img id="u746_seg0" class="img " src="images/workflow__nft_purchase_/u746_seg0.svg" alt="u746_seg0"/>
+        <img id="u746_seg1" class="img " src="images/workflow__nft_purchase_/u746_seg1.svg" alt="u746_seg1"/>
+        <img id="u746_seg2" class="img " src="images/workflow__nft_purchase_/u746_seg2.svg" alt="u746_seg2"/>
+        <div id="u746_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u746" class="ax_default box_1">
-        <img id="u746_img" class="img " src="images/workflow__nft_purchase_/u746.svg"/>
-        <div id="u746_text" class="text ">
-          <p><span>Yes</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
       <div id="u747" class="ax_default box_1">
-        <div id="u747_div" class=""></div>
+        <img id="u747_img" class="img " src="images/workflow__nft_purchase_/u722.svg"/>
         <div id="u747_text" class="text ">
-          <p><span>&nbsp;Inventory</span></p>
+          <p><span>No</span></p>
         </div>
       </div>
 
@@ -342,6 +341,14 @@
         <img id="u748_seg1" class="img " src="images/workflow__nft_purchase_/u748_seg1.svg" alt="u748_seg1"/>
         <div id="u748_text" class="text " style="display:none; visibility: hidden">
           <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u749" class="ax_default box_1">
+        <img id="u749_img" class="img " src="images/workflow__nft_purchase_/u742.svg"/>
+        <div id="u749_text" class="text ">
+          <p><span>Yes</span></p>
         </div>
       </div>
     </div>
