--- a/profile.html
+++ b/profile.html
@@ -53,7 +53,7 @@
 
         <!-- Unnamed (Rectangle) -->
         <div id="u329" class="ax_default box_1">
-          <div id="u329_div" class=""></div>
+          <img id="u329_img" class="img " src="images/profile/u329.svg"/>
           <div id="u329_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
