Updated new wireframe with maintenance page

--- a/career.html
+++ b/career.html
@@ -47,6 +47,272 @@
   </head>
   <body>
     <div id="base" class="">
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u221" class="ax_default box_1">
+        <div id="u221_div" class=""></div>
+        <div id="u221_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Nav bar) -->
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u223" class="ax_default heading_3">
+        <div id="u223_div" class=""></div>
+        <div id="u223_text" class="text ">
+          <p><span>Home</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u224" class="ax_default heading_3">
+        <div id="u224_div" class=""></div>
+        <div id="u224_text" class="text ">
+          <p><span>About Us</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u225" class="ax_default heading_3">
+        <div id="u225_div" class=""></div>
+        <div id="u225_text" class="text ">
+          <p><span>Tokenomics</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u226" class="ax_default heading_3">
+        <div id="u226_div" class=""></div>
+        <div id="u226_text" class="text ">
+          <p><span>Play</span></p>
+        </div>
+      </div>
+      <div id="u222" style="display:none; visibility:hidden;"></div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u227" class="ax_default heading_1">
+        <div id="u227_div" class=""></div>
+        <div id="u227_text" class="text ">
+          <p><span>About Us</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u228" class="ax_default paragraph">
+        <div id="u228_div" class=""></div>
+        <div id="u228_text" class="text ">
+          <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor. Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus pronin sapien nunc accuan eget.</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u229" class="ax_default heading_2">
+        <div id="u229_div" class=""></div>
+        <div id="u229_text" class="text ">
+          <p><span>Join our team</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u230" class="ax_default paragraph">
+        <div id="u230_div" class=""></div>
+        <div id="u230_text" class="text ">
+          <p><span>Write in to us at career@xxxx.com</span></p><p><span>Please state clearly which position and office you are applying for in your email.</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Line) -->
+      <div id="u231" class="ax_default line">
+        <img id="u231_img" class="img " src="images/career/u231.svg"/>
+        <div id="u231_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u232" class="ax_default heading_2">
+        <div id="u232_div" class=""></div>
+        <div id="u232_text" class="text ">
+          <p style="font-size:24px;"><span style="font-family:&quot;Arial Bold&quot;, &quot;Arial&quot;, sans-serif;font-weight:700;">Position 1</span></p><p style="font-size:18px;"><span style="font-family:&quot;Arial&quot;, sans-serif;font-weight:400;">(2 position available)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Placeholder) -->
+      <div id="u233" class="ax_default placeholder">
+        <img id="u233_img" class="img " src="images/career/u233.svg"/>
+        <div id="u233_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u234" class="ax_default paragraph">
+        <div id="u234_div" class=""></div>
+        <div id="u234_text" class="text ">
+          <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor. Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus pronin sapien nunc accuan eget.</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Line) -->
+      <div id="u235" class="ax_default line">
+        <img id="u235_img" class="img " src="images/career/u231.svg"/>
+        <div id="u235_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u236" class="ax_default heading_2">
+        <div id="u236_div" class=""></div>
+        <div id="u236_text" class="text ">
+          <p style="font-size:24px;"><span style="font-family:&quot;Arial Bold&quot;, &quot;Arial&quot;, sans-serif;font-weight:700;">Position 2</span></p><p style="font-size:18px;"><span style="font-family:&quot;Arial&quot;, sans-serif;font-weight:400;">(1 position available)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u237" class="ax_default paragraph">
+        <div id="u237_div" class=""></div>
+        <div id="u237_text" class="text ">
+          <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor. Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus pronin sapien nunc accuan eget.</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Placeholder) -->
+      <div id="u238" class="ax_default placeholder">
+        <img id="u238_img" class="img " src="images/career/u238.svg"/>
+        <div id="u238_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Line) -->
+      <div id="u239" class="ax_default line">
+        <img id="u239_img" class="img " src="images/career/u231.svg"/>
+        <div id="u239_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u240" class="ax_default heading_2">
+        <div id="u240_div" class=""></div>
+        <div id="u240_text" class="text ">
+          <p style="font-size:24px;"><span style="font-family:&quot;Arial Bold&quot;, &quot;Arial&quot;, sans-serif;font-weight:700;">Position 3</span></p><p style="font-size:18px;"><span style="font-family:&quot;Arial&quot;, sans-serif;font-weight:400;">(2 position available)</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Placeholder) -->
+      <div id="u241" class="ax_default placeholder">
+        <img id="u241_img" class="img " src="images/career/u241.svg"/>
+        <div id="u241_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u242" class="ax_default paragraph">
+        <div id="u242_div" class=""></div>
+        <div id="u242_text" class="text ">
+          <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor. Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus pronin sapien nunc accuan eget.</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Footer) -->
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u244" class="ax_default box_2">
+        <div id="u244_div" class=""></div>
+        <div id="u244_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Placeholder) -->
+      <div id="u245" class="ax_default placeholder">
+        <img id="u245_img" class="img " src="images/home/u210.svg"/>
+        <div id="u245_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u246" class="ax_default paragraph">
+        <div id="u246_div" class=""></div>
+        <div id="u246_text" class="text ">
+          <p><span>HOME</span></p><p><span><br></span></p><p><span>GENESIS AUCTION</span></p><p><span><br></span></p><p><span>TOKENOMICS</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u247" class="ax_default paragraph">
+        <div id="u247_div" class=""></div>
+        <div id="u247_text" class="text ">
+          <p><span>ABOUT TEAM</span></p><p><span><br></span></p><p><span>CAREER</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u248" class="ax_default paragraph">
+        <div id="u248_div" class=""></div>
+        <div id="u248_text" class="text ">
+          <p><span>TERMS &amp; CONDITIONS</span></p><p><span><br></span></p><p><span>PRIVACY POLICY</span></p><p><span><br></span></p><p><span>FAQ</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u249" class="ax_default heading_3">
+        <div id="u249_div" class=""></div>
+        <div id="u249_text" class="text ">
+          <p><span>JOIN US ON</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u250" class="ax_default heading_3">
+        <div id="u250_div" class=""></div>
+        <div id="u250_text" class="text ">
+          <p><span>FOLLOW US ON</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Group) -->
+      <div id="u251" class="ax_default" data-left="872" data-top="1640" data-width="109" data-height="31">
+
+        <!-- Unnamed (Shape) -->
+        <div id="u252" class="ax_default icon">
+          <img id="u252_img" class="img " src="images/home/u217.svg"/>
+          <div id="u252_text" class="text " style="display:none; visibility: hidden">
+            <p></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Shape) -->
+        <div id="u253" class="ax_default icon">
+          <img id="u253_img" class="img " src="images/home/u218.svg"/>
+          <div id="u253_text" class="text " style="display:none; visibility: hidden">
+            <p></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Shape) -->
+        <div id="u254" class="ax_default icon">
+          <img id="u254_img" class="img " src="images/home/u219.svg"/>
+          <div id="u254_text" class="text " style="display:none; visibility: hidden">
+            <p></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u255" class="ax_default image">
+        <img id="u255_img" class="img " src="images/home/u220.png"/>
+        <div id="u255_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+      <div id="u243" style="display:none; visibility:hidden;"></div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
   </body>
