--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
       <div id="u86" class="ax_default heading_3">
         <div id="u86_div" class=""></div>
         <div id="u86_text" class="text ">
-          <p><span>Career</span></p>
+          <p><span>About Us</span></p>
         </div>
       </div>
 
@@ -86,7 +86,7 @@
       <div id="u88" class="ax_default heading_3">
         <div id="u88_div" class=""></div>
         <div id="u88_text" class="text ">
-          <p><span>Signup</span></p>
+          <p><span>Play</span></p>
         </div>
       </div>
       <div id="u84" style="display:none; visibility:hidden;"></div>
@@ -938,27 +938,21 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u208" class="ax_default box_2">
-        <div id="u208_div" class=""></div>
-        <div id="u208_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+      <!-- Unnamed (Footer) -->
 
-      <!-- Unnamed (Placeholder) -->
-      <div id="u209" class="ax_default placeholder">
-        <img id="u209_img" class="img " src="images/home/u209.svg"/>
+      <!-- Unnamed (Rectangle) -->
+      <div id="u209" class="ax_default box_2">
+        <div id="u209_div" class=""></div>
         <div id="u209_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u210" class="ax_default paragraph">
-        <div id="u210_div" class=""></div>
-        <div id="u210_text" class="text ">
-          <p><span>HOME</span></p><p><span><br></span></p><p><span>GENESIS AUCTION</span></p><p><span><br></span></p><p><span>TOKENOMICS</span></p>
+      <!-- Unnamed (Placeholder) -->
+      <div id="u210" class="ax_default placeholder">
+        <img id="u210_img" class="img " src="images/home/u210.svg"/>
+        <div id="u210_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
 
@@ -966,7 +960,7 @@
       <div id="u211" class="ax_default paragraph">
         <div id="u211_div" class=""></div>
         <div id="u211_text" class="text ">
-          <p><span>ABOUT TEAM</span></p><p><span><br></span></p><p><span>CAREER</span></p>
+          <p><span>HOME</span></p><p><span><br></span></p><p><span>GENESIS AUCTION</span></p><p><span><br></span></p><p><span>TOKENOMICS</span></p>
         </div>
       </div>
 
@@ -974,15 +968,15 @@
       <div id="u212" class="ax_default paragraph">
         <div id="u212_div" class=""></div>
         <div id="u212_text" class="text ">
-          <p><span>TERMS &amp; CONDITIONS</span></p><p><span><br></span></p><p><span>PRIVACY POLICY</span></p><p><span><br></span></p><p><span>FAQ</span></p>
+          <p><span>ABOUT TEAM</span></p><p><span><br></span></p><p><span>CAREER</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u213" class="ax_default heading_3">
+      <div id="u213" class="ax_default paragraph">
         <div id="u213_div" class=""></div>
         <div id="u213_text" class="text ">
-          <p><span>JOIN US ON</span></p>
+          <p><span>TERMS &amp; CONDITIONS</span></p><p><span><br></span></p><p><span>PRIVACY POLICY</span></p><p><span><br></span></p><p><span>FAQ</span></p>
         </div>
       </div>
 
@@ -990,20 +984,20 @@
       <div id="u214" class="ax_default heading_3">
         <div id="u214_div" class=""></div>
         <div id="u214_text" class="text ">
+          <p><span>JOIN US ON</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u215" class="ax_default heading_3">
+        <div id="u215_div" class=""></div>
+        <div id="u215_text" class="text ">
           <p><span>FOLLOW US ON</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Group) -->
-      <div id="u215" class="ax_default" data-left="872" data-top="3981" data-width="109" data-height="31">
-
-        <!-- Unnamed (Shape) -->
-        <div id="u216" class="ax_default icon">
-          <img id="u216_img" class="img " src="images/home/u216.svg"/>
-          <div id="u216_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
+      <div id="u216" class="ax_default" data-left="872" data-top="3981" data-width="109" data-height="31">
 
         <!-- Unnamed (Shape) -->
         <div id="u217" class="ax_default icon">
@@ -1020,15 +1014,24 @@
             <p></p>
           </div>
         </div>
+
+        <!-- Unnamed (Shape) -->
+        <div id="u219" class="ax_default icon">
+          <img id="u219_img" class="img " src="images/home/u219.svg"/>
+          <div id="u219_text" class="text " style="display:none; visibility: hidden">
+            <p></p>
+          </div>
+        </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u219" class="ax_default image">
-        <img id="u219_img" class="img " src="images/home/u219.png"/>
-        <div id="u219_text" class="text " style="display:none; visibility: hidden">
+      <div id="u220" class="ax_default image">
+        <img id="u220_img" class="img " src="images/home/u220.png"/>
+        <div id="u220_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
+      <div id="u208" style="display:none; visibility:hidden;"></div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
   </body>
