--- a/maintenance.html
+++ b/maintenance.html
@@ -56,7 +56,7 @@
 
           <!-- Unnamed (Rectangle) -->
           <div id="u258" class="ax_default flow_shape">
-            <div id="u258_div" class=""></div>
+            <img id="u258_img" class="img " src="images/maintenance/u258.svg"/>
             <div id="u258_text" class="text " style="display:none; visibility: hidden">
               <p></p>
             </div>
