--- a/maintenance.html
+++ b/maintenance.html
@@ -62,86 +62,82 @@
             </div>
           </div>
 
-          <!-- Unnamed (Group) -->
-          <div id="u259" class="ax_default" data-left="153" data-top="507" data-width="757" data-height="213">
-
-            <!-- Unnamed (Rectangle) -->
-            <div id="u260" class="ax_default heading_1">
-              <div id="u260_div" class=""></div>
-              <div id="u260_text" class="text ">
-                <p><span>We're back!!!</span></p>
-              </div>
+          <!-- Unnamed (Rectangle) -->
+          <div id="u259" class="ax_default heading_1">
+            <div id="u259_div" class=""></div>
+            <div id="u259_text" class="text ">
+              <p><span>We're back!!!</span></p>
             </div>
+          </div>
+
+          <!-- Unnamed (Rectangle) -->
+          <div id="u260" class="ax_default paragraph">
+            <div id="u260_div" class=""></div>
+            <div id="u260_text" class="text ">
+              <p><span>Thank you for staying with us. Let us redirect you back to our portal page.</span></p><p><span><br></span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Group) -->
+          <div id="u261" class="ax_default" data-left="457" data-top="647" data-width="149" data-height="69">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u261" class="ax_default paragraph">
-              <div id="u261_div" class=""></div>
-              <div id="u261_text" class="text ">
-                <p><span>Thank you for staying with us. Let us redirect you back to our portal page.</span></p><p><span><br></span></p>
+            <div id="u262" class="ax_default heading_2">
+              <div id="u262_div" class=""></div>
+              <div id="u262_text" class="text ">
+                <p><span>Follow us on</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Group) -->
-            <div id="u262" class="ax_default" data-left="456" data-top="651" data-width="149" data-height="69">
+            <div id="u263" class="ax_default" data-left="497" data-top="685" data-width="109" data-height="31">
 
-              <!-- Unnamed (Rectangle) -->
-              <div id="u263" class="ax_default heading_2">
-                <div id="u263_div" class=""></div>
-                <div id="u263_text" class="text ">
-                  <p><span>Follow us on</span></p>
+              <!-- Unnamed (Shape) -->
+              <div id="u264" class="ax_default icon">
+                <img id="u264_img" class="img " src="images/home/u217.svg"/>
+                <div id="u264_text" class="text " style="display:none; visibility: hidden">
+                  <p></p>
                 </div>
               </div>
 
-              <!-- Unnamed (Group) -->
-              <div id="u264" class="ax_default" data-left="496" data-top="689" data-width="109" data-height="31">
-
-                <!-- Unnamed (Shape) -->
-                <div id="u265" class="ax_default icon">
-                  <img id="u265_img" class="img " src="images/home/u217.svg"/>
-                  <div id="u265_text" class="text " style="display:none; visibility: hidden">
-                    <p></p>
-                  </div>
-                </div>
-
-                <!-- Unnamed (Shape) -->
-                <div id="u266" class="ax_default icon">
-                  <img id="u266_img" class="img " src="images/home/u218.svg"/>
-                  <div id="u266_text" class="text " style="display:none; visibility: hidden">
-                    <p></p>
-                  </div>
-                </div>
-
-                <!-- Unnamed (Shape) -->
-                <div id="u267" class="ax_default icon">
-                  <img id="u267_img" class="img " src="images/home/u219.svg"/>
-                  <div id="u267_text" class="text " style="display:none; visibility: hidden">
-                    <p></p>
-                  </div>
+              <!-- Unnamed (Shape) -->
+              <div id="u265" class="ax_default icon">
+                <img id="u265_img" class="img " src="images/home/u218.svg"/>
+                <div id="u265_text" class="text " style="display:none; visibility: hidden">
+                  <p></p>
                 </div>
               </div>
 
-              <!-- Unnamed (Image) -->
-              <div id="u268" class="ax_default image">
-                <img id="u268_img" class="img " src="images/home/u220.png"/>
-                <div id="u268_text" class="text " style="display:none; visibility: hidden">
+              <!-- Unnamed (Shape) -->
+              <div id="u266" class="ax_default icon">
+                <img id="u266_img" class="img " src="images/home/u219.svg"/>
+                <div id="u266_text" class="text " style="display:none; visibility: hidden">
                   <p></p>
                 </div>
               </div>
             </div>
 
-            <!-- Unnamed (Shape) -->
-            <div id="u269" class="ax_default icon">
-              <img id="u269_img" class="img " src="images/maintenance/u269.svg"/>
-              <div id="u269_text" class="text " style="display:none; visibility: hidden">
+            <!-- Unnamed (Image) -->
+            <div id="u267" class="ax_default image">
+              <img id="u267_img" class="img " src="images/home/u220.png"/>
+              <div id="u267_text" class="text " style="display:none; visibility: hidden">
                 <p></p>
               </div>
             </div>
           </div>
 
+          <!-- Unnamed (Shape) -->
+          <div id="u268" class="ax_default icon">
+            <img id="u268_img" class="img " src="images/maintenance/u268.svg"/>
+            <div id="u268_text" class="text " style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </div>
+
           <!-- Unnamed (Placeholder) -->
-          <div id="u270" class="ax_default placeholder">
-            <img id="u270_img" class="img " src="images/maintenance/u270.svg"/>
-            <div id="u270_text" class="text " style="display:none; visibility: hidden">
+          <div id="u269" class="ax_default placeholder">
+            <img id="u269_img" class="img " src="images/maintenance/u269.svg"/>
+            <div id="u269_text" class="text " style="display:none; visibility: hidden">
               <p></p>
             </div>
           </div>
@@ -149,38 +145,46 @@
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u271" class="ax_default heading_1">
-        <div id="u271_div" class=""></div>
-        <div id="u271_text" class="text ">
+      <div id="u270" class="ax_default heading_1">
+        <div id="u270_div" class=""></div>
+        <div id="u270_text" class="text ">
           <p><span>Website under maintenance...</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u272" class="ax_default paragraph">
-        <div id="u272_div" class=""></div>
-        <div id="u272_text" class="text ">
+      <div id="u271" class="ax_default paragraph">
+        <div id="u271_div" class=""></div>
+        <div id="u271_text" class="text ">
           <p><span>Our website is currently undergoing scheduled maintenance </span></p><p><span>from 0800 SGT, 25th December 2021 ~ 1200 SGT 26th Decemeber 2021.</span></p><p><span>Please bear with us. Thank you for your patience. In the meantime, check out our gallery/promotion</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Group) -->
-      <div id="u273" class="ax_default" data-left="444" data-top="651" data-width="149" data-height="69">
+      <div id="u272" class="ax_default" data-left="457" data-top="657" data-width="149" data-height="69">
 
         <!-- Unnamed (Rectangle) -->
-        <div id="u274" class="ax_default heading_2">
-          <div id="u274_div" class=""></div>
-          <div id="u274_text" class="text ">
+        <div id="u273" class="ax_default heading_2">
+          <div id="u273_div" class=""></div>
+          <div id="u273_text" class="text ">
             <p><span>Follow us on</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Group) -->
-        <div id="u275" class="ax_default" data-left="484" data-top="689" data-width="109" data-height="31">
+        <div id="u274" class="ax_default" data-left="497" data-top="695" data-width="109" data-height="31">
+
+          <!-- Unnamed (Shape) -->
+          <div id="u275" class="ax_default icon">
+            <img id="u275_img" class="img " src="images/home/u217.svg"/>
+            <div id="u275_text" class="text " style="display:none; visibility: hidden">
+              <p></p>
+            </div>
+          </div>
 
           <!-- Unnamed (Shape) -->
           <div id="u276" class="ax_default icon">
-            <img id="u276_img" class="img " src="images/home/u217.svg"/>
+            <img id="u276_img" class="img " src="images/home/u218.svg"/>
             <div id="u276_text" class="text " style="display:none; visibility: hidden">
               <p></p>
             </div>
@@ -188,67 +192,63 @@
 
           <!-- Unnamed (Shape) -->
           <div id="u277" class="ax_default icon">
-            <img id="u277_img" class="img " src="images/home/u218.svg"/>
+            <img id="u277_img" class="img " src="images/home/u219.svg"/>
             <div id="u277_text" class="text " style="display:none; visibility: hidden">
-              <p></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (Shape) -->
-          <div id="u278" class="ax_default icon">
-            <img id="u278_img" class="img " src="images/home/u219.svg"/>
-            <div id="u278_text" class="text " style="display:none; visibility: hidden">
               <p></p>
             </div>
           </div>
         </div>
 
         <!-- Unnamed (Image) -->
-        <div id="u279" class="ax_default image">
-          <img id="u279_img" class="img " src="images/home/u220.png"/>
-          <div id="u279_text" class="text " style="display:none; visibility: hidden">
+        <div id="u278" class="ax_default image">
+          <img id="u278_img" class="img " src="images/home/u220.png"/>
+          <div id="u278_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
       </div>
 
-      <!-- Unnamed (Placeholder) -->
-      <div id="u280" class="ax_default placeholder">
-        <img id="u280_img" class="img " src="images/maintenance/u280.svg"/>
-        <div id="u280_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
+      <!-- Unnamed (Group) -->
+      <div id="u279" class="ax_default" data-left="81.5" data-top="235" data-width="875" data-height="402">
 
-      <!-- Unnamed (Placeholder) -->
-      <div id="u281" class="ax_default placeholder">
-        <img id="u281_img" class="img " src="images/maintenance/u281.svg"/>
-        <div id="u281_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+        <!-- Unnamed (Placeholder) -->
+        <div id="u280" class="ax_default placeholder">
+          <img id="u280_img" class="img " src="images/maintenance/u280.svg"/>
+          <div id="u280_text" class="text " style="display:none; visibility: hidden">
+            <p></p>
+          </div>
         </div>
-      </div>
 
-      <!-- Unnamed (Placeholder) -->
-      <div id="u282" class="ax_default placeholder">
-        <img id="u282_img" class="img " src="images/maintenance/u282.svg"/>
-        <div id="u282_text" class="text ">
-          <p><span>GALLERY / PROMOTION / INFOGRAPHIC</span></p>
+        <!-- Unnamed (Placeholder) -->
+        <div id="u281" class="ax_default placeholder">
+          <img id="u281_img" class="img " src="images/maintenance/u281.svg"/>
+          <div id="u281_text" class="text " style="display:none; visibility: hidden">
+            <p></p>
+          </div>
         </div>
-      </div>
 
-      <!-- Unnamed (Triangle) -->
-      <div id="u283" class="ax_default flow_shape">
-        <img id="u283_img" class="img " src="images/maintenance/u283.svg"/>
-        <div id="u283_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+        <!-- Unnamed (Placeholder) -->
+        <div id="u282" class="ax_default placeholder">
+          <img id="u282_img" class="img " src="images/maintenance/u282.svg"/>
+          <div id="u282_text" class="text ">
+            <p><span>GALLERY / PROMOTION / INFOGRAPHIC</span></p>
+          </div>
         </div>
-      </div>
 
-      <!-- Unnamed (Triangle) -->
-      <div id="u284" class="ax_default flow_shape">
-        <img id="u284_img" class="img " src="images/maintenance/u283.svg"/>
-        <div id="u284_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+        <!-- Unnamed (Triangle) -->
+        <div id="u283" class="ax_default flow_shape">
+          <img id="u283_img" class="img " src="images/maintenance/u283.svg"/>
+          <div id="u283_text" class="text " style="display:none; visibility: hidden">
+            <p></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Triangle) -->
+        <div id="u284" class="ax_default flow_shape">
+          <img id="u284_img" class="img " src="images/maintenance/u283.svg"/>
+          <div id="u284_text" class="text " style="display:none; visibility: hidden">
+            <p></p>
+          </div>
         </div>
       </div>
 
@@ -257,6 +257,14 @@
         <div id="u285_div" class=""></div>
         <div id="u285_text" class="text ">
           <p><span style="font-family:&quot;Arial&quot;, sans-serif;font-style:normal;">(1st Scenario)</span></p><p><span style="font-family:&quot;Arial&quot;, sans-serif;font-style:normal;">Shows infographic during maintenance</span></p><p><span style="font-family:&quot;Arial&quot;, sans-serif;font-style:normal;"><br></span></p><p><span style="font-family:&quot;Arial&quot;, sans-serif;font-style:normal;">(2nd Scenario)</span></p><p><span style="font-family:&quot;Arial&quot;, sans-serif;font-style:normal;">Gallery our dgp portal</span></p><p><span style="font-family:&quot;Arial&quot;, sans-serif;font-style:normal;"><br></span></p><p><span style="font-family:&quot;Arial&quot;, sans-serif;font-style:normal;">(3rd Scenario)</span></p><p><span style="font-family:&quot;Arial&quot;, sans-serif;font-style:normal;">Promo, such as advertise new eggs, job offer and etc.</span></p><p><span style="font-family:&quot;Arial&quot;, sans-serif;font-style:normal;"><br></span></p><p><span style="font-family:&quot;Arial&quot;, sans-serif;font-style:normal;"><br></span></p><p><span style="font-family:&quot;Arial Italic&quot;, &quot;Arial&quot;, sans-serif;font-style:italic;">*Click on the middle infographic placeholder to change to a new redirect page</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u286" class="ax_default heading_1">
+        <div id="u286_div" class=""></div>
+        <div id="u286_text" class="text ">
+          <p><span>2021/12/25, 08:00:00 ~ 2021/12/26, 12:00:00 </span></p>
         </div>
       </div>
     </div>
