--- a/maintenance.html
+++ b/maintenance.html
@@ -264,7 +264,15 @@
       <div id="u286" class="ax_default heading_1">
         <div id="u286_div" class=""></div>
         <div id="u286_text" class="text ">
-          <p><span>2021/12/25, 08:00:00 ~ 2021/12/26, 12:00:00 </span></p>
+          <p><span>08:00:00, 25/12/2021 ~ 12:00:00, 26/12/2021</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u287" class="ax_default sticky_1">
+        <div id="u287_div" class=""></div>
+        <div id="u287_text" class="text ">
+          <p><span>Animation of redirecting (maybe 2 frame animation of redirecting)</span></p>
         </div>
       </div>
     </div>
